<resources>
    <string name="app_name">Cloink</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cloink</string>
    <string name="nav_header_subtitle">Secure private networking</string>
    <string name="nav_header_desc">Cloink navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="quick_settings_tile_label">Cloink</string>

    <string name="menu_advanced">Advanced</string>
    <string name="menu_about">About</string>
    <string name="menu_docs">Docs</string>
    <string name="menu_change_server">Change Server</string>
    <string name="menu_profiles">Profiles</string>
    <string name="menu_troubleshoot">Troubleshoot</string>
    <string name="menu_home">Home</string>
    <string name="drawer_subtitle">Secure private networking</string>
    <string name="navigation_menu">Menu</string>
    <string name="navigation_back">Back</string>
    <string name="drawer_dark_theme">Dark theme</string>
    <string name="vpn_permission_required">VPN permission is required</string>

    <string name="main_status_disconnected">Disconnected</string>
    <string name="home_connect">Connect</string>
    <string name="home_connecting">Connecting</string>
    <string name="home_connected">Connected</string>
    <string name="home_disconnecting">Disconnecting</string>
    <string name="home_status_connecting">Establishing secure connection</string>
    <string name="home_status_disconnected">Your private network is paused</string>
    <string name="home_status_connected">Cloink network active</string>
    <string name="home_status_disconnecting">Closing connection</string>
    <string name="home_network_peers">Network peers</string>
    <string name="home_peers_connected">%1$d of %2$d connected</string>
    <string name="home_view_peers">View</string>
    <string name="home_device_unavailable">Device details unavailable</string>
    <string name="network_panel_title">Network</string>
    <string name="main_desc_bg_mask">background mask</string>
    <string name="main_desc_connect">connect-disconnect</string>

    <string name="fragment_firstinstall_txt">By default, this app connects to https://cloink.4w.ink. You can select Change Server to use another Cloink deployment.</string>
    <string name="fragment_firstinstall_continue">Continue</string>
    <string name="first_install_title">Welcome</string>
    <string name="fragment_firstinstall_desc_logo">Cloink logo</string>
    <string name="fragment_firstinstall_androidtv_beta">Android TV support is currently in beta. Some features may not work as expected.</string>


    <string name="about_version">Version:&#160;</string>
    <string name="about_license"><u>License agreement</u></string>
    <string name="about_privacy_poliy"><u>Privacy policy</u></string>
    <string name="about_rights">© 2026 Cloink. All rights reserved.</string>

    <string name="zero_peers_no_machines">It looks like there are no machines that you can connect to…</string>
    <string name="zero_peers_btn_learn_why">Learn why</string>

    <string name="btn_close">Close</string>
    <string name="always_on_title">VPN settings required</string>
    <string name="update_available_title">Cloink update available</string>
    <string name="update_available_message">Version %1$s was signed and published by Cloink. Download it now?</string>
    <string name="update_download">Download</string>
    <string name="update_later">Later</string>
    <string name="peers_connected"><![CDATA[<b>%1$d</b> <b>of</b> <b>%2$d</b> Peers connected]]></string>
    <string name="peers_hint_search_peers">Search peers</string>
    <string name="peers_title">Peers</string>
    <string name="peer_status_connected">Connected</string>
    <string name="peer_status_connecting">Connecting</string>
    <string name="peer_status_idle">Idle</string>
    <string name="peer_status_unknown">Unknown</string>
    <string name="peer_filter_all">All</string>
    <string name="peer_filter_idle">Idle</string>
    <string name="peer_filter_connecting">Connecting</string>
    <string name="peer_filter_connected">Connected</string>
    <string name="peers_clipboard_copy_ip">Copy IP</string>
    <string name="peers_clipboard_copy_ipv6">Copy IPv6</string>
    <string name="peers_clipboard_copy_fqdn">Copy FQDN</string>
    <string name="peers_desc_filter">Filter</string>


    <string name="resources_connected"><![CDATA[<b>%1$d</b> <b>of</b> <b>%2$d</b> Resources connected]]></string>
    <string name="networks_hint_search_networks">Search resources</string>
    <string name="networks_title">Networks</string>
    <string name="networks_desc_exit_node">exit node</string>

    <string name="change_server_title_server">Server</string>
    <string name="change_server_hint">https://cloink.4w.ink</string>
    <string name="change_server_setup_key">Add this device with a setup key</string>
    <string name="change_server_setup_key_hint">"0EF79C2F-DEE1-419B-BFC8-1BF529332998"</string>
    <string name="change_server_error_invalid_setup_key">Invalid setup key format</string>

    <string name="change_server_btn">Change</string>
    <string name="change_server_verifying">Verifying…</string>
    <string name="change_server_btn_reset">Use Cloink server</string>

    <string name="change_server_alert_title">Change Server</string>
    <string name="change_server_alert_yes">Yes</string>
    <string name="change_server_alert_cancel">Cancel</string>
    <string name="change_server_alert_desc">Changing server will erase the local config and disconnect this device from the current Cloink account.</string>

    <string name="change_server_success_title">Server was changed</string>
    <string name="change_server_success_desc">Click on the connect button to continue</string>
    <string name="change_server_success_cloe">Ok</string>
    <string name="change_server_success_icon">Success icon</string>


    <string name="advanced_title_presharedkey">Add a pre-shared key</string>
    <string name="advanced_details">You will only communicate with peers that use the same key.</string>
    <string name="advanced_hint">Add a pre-shared key</string>
    <string name="advanced_save">Save</string>
    <string name="advanced_presharedkey_saved_success">Pre-shared key saved successfully</string>
    <string name="advanced_presharedkey_save_error">Failed to save pre-shared key</string>
    <string name="advanced_tracelog">Enable trace log level.</string>
    <string name="advanced_share_logs">Share logs</string>
    <string name="troubleshoot_debug_bundle">Upload debug bundle</string>
    <string name="troubleshoot_anonymize">Anonymize sensitive data</string>
    <string name="advanced_rosenpass">Enable Rosenpass</string>
    <string name="advanced_rosenpass_permissive">Enable Rosenpass permissive mode.</string>
    <string name="advanced_title_network_security">Network &amp; Security</string>

    <string name="advanced_disable_client_routes">Disable client routes</string>
    <string name="advanced_disable_client_routes_desc">Prevents this device from processing client routes received from the management service</string>
    <string name="advanced_disable_server_routes">Disable server routes</string>
    <string name="advanced_disable_server_routes_desc">Prevents this device from acting as a router for server routes received from the management service</string>
    <string name="advanced_disable_dns">Disable DNS</string>
    <string name="advanced_disable_dns_desc">Disables Cloink DNS configuration on this device</string>
    <string name="advanced_disable_firewall">Disable firewall</string>
    <string name="advanced_disable_firewall_desc">Disables the Cloink firewall</string>
    <string name="advanced_disable_ipv6">Disable IPv6</string>
    <string name="advanced_disable_ipv6_desc">Disables IPv6 overlay addressing on the tunnel interface</string>
    <string name="advanced_allow_ssh">Enable SSH</string>
    <string name="advanced_allow_ssh_desc">Allows SSH connections to this device</string>
    <string name="advanced_allow_remote_jobs">Allow remote jobs</string>
    <string name="advanced_allow_remote_jobs_desc">Allows the management server to run remote jobs (e.g. debug bundles) on this device</string>
    <string name="advanced_block_inbound">Block inbound connections</string>
    <string name="advanced_block_inbound_desc">Blocks all inbound connections to this device and routed networks. This overrides any policies received from the management service</string>


    <string name="desc_logo">Cloink logo</string>
    <string name="desc_peers_empty">empty box</string>

    <string name="dialog_always_on_desc"><![CDATA[You have a VPN app that has Always On turned on. To enable the Cloink app, you first need to go to your <b>Network & Internet settings</b> → <b>Advanced</b> → Check the <b>gear icon</b> for all the apps listed here on this page. Disable Always On for the apps that are not Cloink.]]></string>

    <string name="advanced_theme_system">System</string>
    <string name="advanced_theme_title">Theme Mode</string>
    <string name="advanced_theme_dark">Dark</string>
    <string name="advanced_theme_light">Light</string>
    <string name="advanced_theme_desc">Choose the app appearance mode.</string>
    <string name="advanced_force_relay_conn">Force relay connection</string>
    <string name="advanced_force_relay_conn_desc">Forces usage of relay when connecting to peers</string>
    <string name="reconnectionNeededWarningMessage">To apply the setting, you will need to reconnect.</string>
    <string name="change_server_setup_key_warning">Using setup keys for user devices is not recommended. SSO with MFA provides stronger security, proper user-device association, and periodic re-authentication.</string>
    <string name="change_server_error_invalid_server_url">Invalid URL format</string>
    <string name="device_code">Device Code: %s</string>
    <string name="device_login_title">Sign in on another device</string>
    <string name="qr_code_description">Sign-in QR code</string>
    <string name="qr_code_unavailable">Could not generate the sign-in QR code.</string>
    <string name="troubleshoot_debug_bundle_key">Debug bundle key</string>
    <string name="troubleshoot_debug_bundle_key_copied">Debug bundle key copied to clipboard</string>
    <string name="troubleshoot_debug_bundle_failed">Failed to create debug bundle: %1$s</string>
    <string name="tv_menu_hint">Hold left directional button to open the menu</string>

    <!-- Profile strings -->
    <string name="profile_default">Profile: default</string>
    <string name="profile_tap_to_manage">Tap to manage profiles</string>
    <string name="profiles_title">Profiles</string>
    <string name="profiles_active">Active</string>
    <string name="profiles_add">Add Profile</string>
    <string name="profiles_switch">Switch</string>
    <string name="profiles_logout">Logout</string>
    <string name="profiles_remove">Remove</string>
    <string name="profiles_dialog_add_title">New Profile</string>
    <string name="profiles_dialog_add_message">Enter a name for the new profile:</string>
    <string name="profiles_dialog_add_hint">Profile name</string>
    <string name="profiles_dialog_switch_title">Switch Profile</string>
    <string name="profiles_dialog_switch_message">Switch to profile \'%s\'?\n\nThis will disconnect the current connection.</string>
    <string name="profiles_dialog_logout_title">Logout from Profile</string>
    <string name="profiles_dialog_logout_message">Logout from profile \'%s\'?\n\nYou will need to re-authenticate to use this profile again.</string>
    <string name="profiles_dialog_remove_title">Remove Profile</string>
    <string name="profiles_dialog_remove_message">Are you sure you want to remove profile \'%s\'?\n\nThis action cannot be undone.</string>
    <string name="profiles_error_empty_name">Profile name cannot be empty</string>
    <string name="profiles_error_invalid_name">Profile name can only contain letters, numbers, hyphens, and underscores</string>
    <string name="profiles_error_already_exists">Profile \'%s\' already exists</string>
    <string name="profiles_error_cannot_remove_active">Cannot remove the active profile. Switch to another profile first.</string>
    <string name="profiles_error_cannot_remove_default">Cannot remove the default profile</string>
    <string name="profiles_success_added">Profile \'%s\' created successfully</string>
    <string name="profiles_success_switched">Switched to profile \'%s\'</string>
    <string name="profiles_success_logged_out">Logged out from profile \'%s\'</string>
    <string name="profiles_success_removed">Profile \'%s\' removed successfully</string>
</resources>
