...
        else -> systemDark
    }
    Surface(
        modifier = Modifier
            .width(304.dp)
            .fillMaxHeight()
            .testTag("main_drawer_surface"),
        color = MaterialTheme.colorScheme.surface,
        contentColor = MaterialTheme.colorScheme.onSurface,
        shadowElevation = 12.dp,
    ) {
        Column(
            Modifier
...
